# ocr_benchmarking

./: .env.example  .gitignore  Makefile  README.md  VL_ocr_methods.py  colab_notebook.py  generate_ground_truth.py  generate_vlm_ground_truth.py  hello.py  ocr_benchmarking_blog.md  ocr_comparison.py  ocr_methods.py  pyproject.toml  requirements.txt  run_benchmark.py  sample_dataset.py
dataset/sample/: ground_truth.json  ground_truth_vlm.json
docs/: paddleocr_usage.md
examples/: compare_results.py  easyocr_example.py  ground_truth_gen.py  ground_truth_openai.py  ground_truth_qwen.py  paddleocr_example.py  tesseract_example.py
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
results/: easyocr_results.json  paddleocr_log.txt  paddleocr_results.json  tesseract_results.json
results/extracted_texts/: easyocr_extracted_text.json  easyocr_extracted_text.txt  paddleocr_extracted_text.json  paddleocr_extracted_text.txt  tesseract_extracted_text.json  tesseract_extracted_text.txt
src/benchmark/: __init__.py  metrics.py  runner.py
src/ocr/: __init__.py  base.py
src/ocr/traditional/: __init__.py  easyocr.py  paddleocr.py  tesseract.py
src/utils/: __init__.py  data_loader.py  image_processing.py
